--- a/hand-on/productdata/src/main/resources/application.properties
+++ b/hand-on/productdata/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useLegacyDatetimeCode=fal
 spring.datasource.username=dhruv
 spring.datasource.password=Daksh@2405
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+spring.jpa.properties.javax.persistence.sharedCache.mode=ALL
+spring.cache.ehcache.config=classpath:ehcache.xml
