--- a/hand-on/transactionmanagement/pom.xml
+++ b/hand-on/transactionmanagement/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>dev.dmohindru.springdata</groupId>
-	<artifactId>productdata</artifactId>
+	<groupId>dev.dmohindru.springdata.transactionmanagement</groupId>
+	<artifactId>transactionmanagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>productdata</name>
-	<description>Product Repos</description>
+	<name>transactionmanagement</name>
+	<description>Transaction Management</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -20,10 +20,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-ehcache</artifactId>
 		</dependency>
 
 		<dependency>
